--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,13 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
+mongo {
+  url = "mongodb://localhost:27017"
+  url = ${?MONGO_URL}
+  username = mongo-root
+  username = ${?MONGO_USERNAME}
+  password = mongo-password
+  database = football-app
+  database = ${?DATABASE_NAME}
+}
+
+
