Added more build items like yaml files for football app, mongodb-express, application.conf, and build.sbt. Also added the Jenkinsfile

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,6 +6,7 @@ mongo {
   username = mongo-root
   username = ${?MONGO_USERNAME}
   password = mongo-password
+  password = ${?MONGO_PASSWORD}
   database = football-app
   database = ${?DATABASE_NAME}
 }
