--- a/manifests/mongodb-express/mongodb-express-ingress.yaml
+++ b/manifests/mongodb-express/mongodb-express-ingress.yaml
@@ -1,17 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: mongodb-ingress
+  name: mongodb-express-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   # tls:
   # - hosts:
   #   - myapp.com
   #     secretName: myapp-secret-tls
   rules:
-    - host: staging.tiered-planet.net
+    - host: mongodb.tiered-planet.net
       http:
         paths:
-          - path: /mongo-express
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
