Updated configuration to match the configmap

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,4 @@
 # https://www.playframework.com/documentation/latest/Configuration
-
 mongo {
   url = "mongodb://localhost:27017"
   url = ${?MONGO_URL}
@@ -9,6 +8,10 @@ mongo {
   password = ${?MONGO_PASSWORD}
   database = football-app
   database = ${?DATABASE_NAME}
+  host = localhost
+  host = ${?MONGO_HOST}
+  port = 27017
+  port = ${?MONGO_PORT}
 }
 
 
