--- a/manifests/football-app/football-app-microservice.yaml
+++ b/manifests/football-app/football-app-microservice.yaml
@@ -5,6 +5,7 @@ metadata:
         app: mild-temper-microservice-service
         stack: frontend
     name: mild-temper-microservice-service
+    namespace: default
 spec:
     selector:
         source: demo
@@ -23,6 +24,7 @@ metadata:
     annotations:
         nginx.ingress.kubernetes.io/rewrite-target: /$2
     name: mild-temper-ingress
+    namespace: default
 spec:
     rules:
         -   http:
@@ -36,6 +38,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
     name: football-configmap
+    namespace: default
 data:
     database_url: mongodb
 
@@ -48,6 +51,7 @@ metadata:
         stack: frontend
         source: demo
     name: mild-temper-microservice
+    namespace: default
 spec:
     replicas: 3
     selector:
@@ -70,12 +74,12 @@ spec:
                         -   name: MONGO_HOST
                             valueFrom:
                                 configMapKeyRef:
-                                    name: football-configmap
+                                    name: football-app-configmap
                                     key: mongo_host
                         -   name: MONGO_PORT
                             valueFrom:
                                 configMapKeyRef:
-                                    name: football-configmap
+                                    name: football-app-configmap
                                     key: mongo_port
                         -   name: MONGO_USERNAME
                             value: root
@@ -86,4 +90,3 @@ spec:
                                     key: mongodb-root-password
                         -   name: DATABASE_NAME
                             value: mild-temper-football-app
-
