--- a/manifests/football-app/football-app-configmap.yaml
+++ b/manifests/football-app/football-app-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
     name: football-app-configmap
+    namespace: default
 data:
     mongo_host: "mongodb"
     mongo_port: "27017"
