--- a/manifests/football-app/football-app-microservice.yaml
+++ b/manifests/football-app/football-app-microservice.yaml
@@ -63,6 +63,7 @@ spec:
                 app: mild-temper-microservice
                 run: mild-temper-microservice
                 source: demo
+            namespace: default
         spec:
             containers:
                 -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/mild-temper-microservice
