--- a/manifests/football-app/football-app-microservice.yaml
+++ b/manifests/football-app/football-app-microservice.yaml
@@ -16,7 +16,7 @@ spec:
             port: 30201
             targetPort: 8080
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
     labels:
@@ -30,9 +30,11 @@ spec:
         -   http:
                 paths:
                     -   path: /mild-temper(/|$)(.*)
+                        pathType: Prefix
                         backend:
-                            serviceName: mild-temper-microservice-service
-                            servicePort: 30201
+                            service:
+                                name: mild-temper-microservice-service
+                                port: 30201
 ---
 apiVersion: v1
 kind: ConfigMap
