--- a/conf/production.conf
+++ b/conf/production.conf
@@ -2,11 +2,16 @@ play.http.secret.key="e214hQ__]v2ENrvkl0gjsktfdg7tE0]q/HKLzk:E=yW5XAZy>rmX`g=NS`
 play.http.secret.key=${?APPLICATION_SECRET}
 
 mongo {
-  url = "mongodb://localhost:27017  "
+  url = "mongodb://localhost:27017"
   url = ${?MONGO_URL}
   username = mongo-root
   username = ${?MONGO_USERNAME}
   password = mongo-password
-  password = ${?MONGO_USERNAME}
+  password = ${?MONGO_PASSWORD}
   database = football-app
   database = ${?DATABASE_NAME}
+  host = localhost
+  host = ${?MONGO_HOST}
+  port = 27017
+  port = ${?MONGO_PORT}
+}
