Added the http context configuration to ensure that it works.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,4 @@
+play.http.secret.key="pW]D0xK;Zx@>muWQV`f^7BmSlLmJ7Ugq`392F03:ldgOXjP<n?keOl=@zcIkZhyo"
 # https://www.playframework.com/documentation/latest/Configuration
 mongo {
   url = "mongodb://localhost:27017"
