Added application.conf filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,3 +17,8 @@ mongo {
 
 play.http.context="/mild-temper/"
 
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = ["staging.tiered-planet.net", "localhost:9000"]
+}
+
