--- a/conf/production.conf
+++ b/conf/production.conf
@@ -16,4 +16,7 @@ mongo {
   port = ${?MONGO_PORT}
 }
 
-
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = ["staging.tiered-planet.net", "localhost:9000"]
+}
