--- a/conf/production.conf
+++ b/conf/production.conf
@@ -20,3 +20,4 @@ play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
   allowed = ["staging.tiered-planet.net", "localhost:9000"]
 }
+play.http.context="/mild-temper/"
