Ah, darn redirect, we will try it!

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -18,6 +18,6 @@ mongo {
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["staging.tiered-planet.net", "localhost:9000"]
+  allowed = [".tiered-planet.net", "localhost:9000"]
 }
 play.http.context="/mild-temper"
