Ah, darn redirect, we will try it!

--- a/manifests/football-app/football-app-microservice.yaml
+++ b/manifests/football-app/football-app-microservice.yaml
@@ -21,6 +21,8 @@ kind: Ingress
 metadata:
     labels:
         stack: frontend
+    annotations:
+        nginx.ingress.kubernetes.io/rewrite-target: /mild-temper/$2
     name: mild-temper-ingress
     namespace: default
 spec:
