--- a/manifests/football-app/football-app-microservice.yaml
+++ b/manifests/football-app/football-app-microservice.yaml
@@ -22,14 +22,14 @@ metadata:
     labels:
         stack: frontend
     annotations:
-        nginx.ingress.kubernetes.io/rewrite-target: /mild-temper
+        nginx.ingress.kubernetes.io/rewrite-target: /mild-temper/$2
     name: mild-temper-ingress
     namespace: default
 spec:
     rules:
         -   http:
                 paths:
-                    -   path: /mild-temper
+                    -   path: /mild-temper(/|$)(.*)
                         pathType: Prefix
                         backend:
                             service:
