Experiment with the ingress

--- a/manifests/football-app/football-app-microservice.yaml
+++ b/manifests/football-app/football-app-microservice.yaml
@@ -22,7 +22,7 @@ metadata:
     labels:
         stack: frontend
     annotations:
-        nginx.ingress.kubernetes.io/rewrite-target: /mild-temper/$2
+        nginx.ingress.kubernetes.io/rewrite-target: /mild-temper$1$2
     name: mild-temper-ingress-path
     namespace: default
 spec:
@@ -35,28 +35,6 @@ spec:
                           service:
                               name: mild-temper-microservice-service
                               port:
-                                  number: 30201
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-    labels:
-        stack: frontend
-    annotations:
-        nginx.ingress.kubernetes.io/rewrite-target: /mild-temper
-    name: mild-temper-ingress-root
-    namespace: default
-spec:
-    rules:
-        - host: mild-temper.tiered-planet.net
-          http:
-                paths:
-                    -   path: /mild-temper
-                        pathType: Prefix
-                        backend:
-                            service:
-                                name: mild-temper-microservice-service
-                                port:
                                   number: 30201
 ---
 kind: Deployment
