--- a/manifests/mongodb-express/mongodb-express-ingress.yaml
+++ b/manifests/mongodb-express/mongodb-express-ingress.yaml
@@ -3,17 +3,16 @@ kind: Ingress
 metadata:
   name: mongodb-express-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /mongodb/$2
 spec:
   # tls:
   # - hosts:
   #   - myapp.com
   #     secretName: myapp-secret-tls
   rules:
-    - host: mongodb.tiered-planet.net
-      http:
+    - http:
         paths:
-          - path: /(.*)
+          - path: /mongodb/(/|$)(.*)
             pathType: Prefix
             backend:
               service:
