Applied new filters

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -21,4 +21,4 @@ play.filters.hosts {
   allowed = [".tiered-planet.net", "localhost:9000"]
 }
 play.http.context="/mild-temper/"
-play.http.filters=filters.LoggingFilter
+play.http.filters=filters.Filters
