--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,4 +22,4 @@ play.filters.hosts {
   allowed = ["staging.tiered-planet.net", "localhost:9000"]
 }
 
-play.http.filters=filters.LoggingFilter
+play.http.filters=filters.Filters
